# study

./: CMakeLists.txt  build.sh  platformer
bubble/: bubble.hpp
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_ninja/bubble/: cmake_install.cmake
build_ninja/tests/: cmake_install.cmake  test_bubble
long_number/: CMakeLists.txt
long_number/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
long_number/tests/: CMakeLists.txt  long_number_test.cpp  long_number_test_biv.cpp
mario_game/: main.cpp
mario_game_oop/: Level.cpp  Level.hpp  Map.cpp  Map.hpp  Mario.cpp  Mario.hpp  Movers.cpp  Movers.hpp  Orientation.cpp  game  main  main.cpp
mario_game_refactoring/: game  main.cpp
menu/: CMakeLists.txt  main.cpp  menu.hpp  menu_func.cpp  menu_func.hpp  menu_items.cpp  menu_items.hpp
src/: CMakeLists.txt
src/bubble/: CMakeLists.txt  bubble.cpp  bubble.hpp
src/tests/: CMakeLists.txt  test_bubble.cpp
